[APEREZ-10] se agrega logica para tratar los campos jsonb y alter de la tabla product, ademas se sube el coverage a 80%